# ttc-data

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.translink  README.md  claude-talking.txt  compose.yml  main.py  makefile  pyproject.toml
app/: constants.py
dags/: get_api.py  orchestrator.py  translink_orchestrator.py
notebooks/: get-api.py  get_api.py  ttc-api.py
src/: get_api.py
tasks/: prd-translink-transit.md  tasks-translink-transit.md
tf/: main.tf  terraform.tfstate.backup
translink/: constants.py  dashboard.py  get_api.py  get_gtfs_static.py  transform.py  warehouse.py
